--- a/.devcontainer/ros2/Dockerfile
+++ b/.devcontainer/ros2/Dockerfile
@@ -1,8 +1,18 @@
 # Define the build argument with a default value
-ARG ROS_VERSION=${ROS_VERSION}
-
+ARG ROS_DISTRO="humble"
+ARG USERNAME="developer"
+ARG GROUPNAME="developer"
+ARG GROUP_GID="1000"
+ARG USER_UID="1000"
 # Conditionally set the base image based on the argument
-FROM docker.io/ros:${ROS_VERSION}
+FROM docker.io/ros:${ROS_DISTRO}
+
+ARG ROS_DISTRO
+ARG USERNAME
+ARG GROUPNAME
+ARG GROUP_GID
+ARG USER_UID
+
 
 ENV SHELL /bin/bash
 # # Install sudo
@@ -24,11 +34,18 @@ EOF
 
 RUN <<EOF
 apt-get update 
-apt-get install -y ros-${ROS_VERSION}-rmw-cyclonedds-cpp
+apt-get install -y ros-${ROS_DISTRO}-rmw-cyclonedds-cpp
 apt-get clean
 rm -rf /var/lib/apt/lists/*
 EOF
 
+
+RUN userdel ubuntu
+RUN groupadd --gid $GROUP_GID $USERNAME
+RUN useradd --uid $USER_UID --gid $GROUP_GID --create-home $USERNAME
+RUN echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME
+RUN chmod 0440 /etc/sudoers.d/$USERNAME
+    
 COPY <<EOF /post-create-script.sh
 #!/bin/bash
 bash /workspace/.scripts/print_packages.bash
