--- a/.devcontainer/ros2/compose.yml
+++ b/.devcontainer/ros2/compose.yml
@@ -5,7 +5,7 @@ services:
     build: 
       context: .
       args:
-        ROS_DISTRO: ${ROS_DISTRO:-humble}  # You can pass ROS_DISTRO as an environment variable
+        ROS_DISTRO: ${ROS_DISTRO:-noetic}  # You can pass ROS_DISTRO as an environment variable
         USERNAME: ${USERNAME:-developer}      # Pass the username
         GROUPNAME: ${GROUPNAME:-developer}    # Pass the group name
         GROUP_GID: ${GROUP_GID:-1000}    # Pass the group GID
